HW 3.4 is done